[SAU-846] fix pdf alignment

--- a/app/styles/region-detail.scss
+++ b/app/styles/region-detail.scss
@@ -208,8 +208,14 @@
     .col-sm-7 {
         padding: 0px;
     }
+
     h3.values-by {
         margin-top: 35px;
+    }
+
+    .recon-ref h3,
+    .recon-ref p a i {
+      margin-left: -16px;
     }
   }
 
